<resources>
    <string name="app_name">M-Busi</string>
    <string name="nav_home">Domov</string>
    <string name="nav_sensors">Senzorji</string>
    <string name="nav_map">Zemljevid</string>
    <string name="nav_events">Dogodki</string>
    <string name="nav_settings">Nastavitve</string>
    <string name="home_title">Pregled</string>
    <string name="home_connection_status">Status povezave</string>
    <string name="home_active_sensors">Aktivni senzorji</string>
    <string name="home_events_today">Današnji dogodki</string>
    <string name="sensors_title">Senzorji</string>
    <string name="sensor_camera">Kamera</string>
    <string name="sensor_gps">GPS lokacija</string>
    <string name="sensor_accelerometer">Pospeškometer</string>
    <string name="events_title">Dogodki</string>
    <string name="events_new">Nov dogodek</string>
    <string name="events_history">Zgodovina</string>
    <string name="settings_title">Nastavitve</string>
    <string name="settings_mqtt">MQTT povezava</string>
    <string name="settings_simulation">Simulacija</string>
    <string name="settings_frequency">Frekvenca zajemanja</string>
    <string name="settings_gps_interval">GPS lokacija</string>
    <string name="settings_accelerometer_interval">Pospeškometer</string>
    <string name="settings_interval_seconds">%d s</string>
    <string name="settings_frequency_note">Spremembe veljajo ob ponovnem zagonu senzorja</string>
    <string name="status_connected">Povezano</string>
    <string name="status_disconnected">Nepovezano</string>
    <string name="enabled">Omogočeno</string>
    <string name="disabled">Onemogočeno</string>
    <string name="accelerometer_magnitude">Magnituda: %.1f m/s²</string>
    <string name="accelerometer_extreme">EKSTREMNI DOGODEK!</string>
    <string name="notification_channel_name">Pospeškometer</string>
    <string name="notification_channel_description">Obvestila za zajem podatkov pospeškometra</string>
    <string name="notification_title">Pospeškometer aktiven</string>
    <string name="notification_text">Magnituda: %.1f m/s²</string>
    <string name="gps_coordinates">Lat: %1$.5f, Lon: %2$.5f</string>
    <string name="gps_speed">Hitrost: %.1f km/h</string>
    <string name="gps_extreme">VISOKA HITROST!</string>
    <string name="gps_notification_channel_name">GPS lokacija</string>
    <string name="gps_notification_channel_description">Obvestila za sledenje GPS lokaciji</string>
    <string name="gps_notification_title">GPS aktiven</string>
    <string name="gps_notification_text">%1$.5f, %2$.5f | %3$.1f km/h</string>
    <string name="open_camera">Odpri kamero</string>
    <string name="last_capture">Zadnji zajem: %1$s</string>
    <string name="camera_error">Napaka pri zajemu slike</string>
    <string name="camera_permission_denied">Dovoljenje za kamero zavrnjeno</string>
    <string name="camera_not_available">Kamera ni na voljo</string>
    <string name="upload_image">Pošlji na strežnik</string>
    <string name="upload_pending">Čaka na nalaganje</string>
    <string name="upload_in_progress">Nalaganje…</string>
    <string name="upload_success">Uspešno naloženo</string>
    <string name="upload_failed">Nalaganje ni uspelo</string>
    <string name="upload_no_connection">Ni povezave s strežnikom</string>
    <string name="schedule_sensor">Urnik</string>
    <string name="schedules">Urniki</string>
    <string name="schedules_for_sensor">Urniki za %1$s</string>
    <string name="no_schedules">Ni nastavljenih urnikov</string>
    <string name="add_schedule">Dodaj urnik</string>
    <string name="new_schedule">Nov urnik</string>
    <string name="edit_schedule">Uredi urnik</string>
    <string name="save">Shrani</string>
    <string name="cancel">Prekliči</string>
    <string name="delete">Izbriši</string>
    <string name="schedule_type">Tip urnika</string>
    <string name="schedule_daily">Vsak dan</string>
    <string name="schedule_weekly">Tedensko</string>
    <string name="schedule_one_time">Enkratno</string>
    <string name="action">Akcija</string>
    <string name="action_notification">Samo obvestilo</string>
    <string name="action_auto_start">Avtomatski zagon</string>
    <string name="action_auto_start_with_duration">Avtomatski zagon - %1$d min</string>
    <string name="time">Čas</string>
    <string name="select_time">Izberi čas</string>
    <string name="select_date">Izberi datum</string>
    <string name="duration_minutes">Trajanje: %1$d minut</string>
    <string name="duration_30_min">Trajanje: 30 minut</string>
    <string name="day_mon">Pon</string>
    <string name="day_tue">Tor</string>
    <string name="day_wed">Sre</string>
    <string name="day_thu">Čet</string>
    <string name="day_fri">Pet</string>
    <string name="day_sat">Sob</string>
    <string name="day_sun">Ned</string>
    <string name="schedule_notification_channel_name">Opomniki urnikov</string>
    <string name="schedule_notification_channel_description">Obvestila za načrtovane urnike senzorjev</string>
    <string name="camera_reminder_title">Čas za zajem slike</string>
    <string name="camera_reminder_text">Odpri aplikacijo in zajemi sliko</string>
    <string name="gps_reminder_title">GPS urnik aktiven</string>
    <string name="gps_reminder_text">GPS sledenje se je pričelo</string>
    <string name="accelerometer_reminder_title">Pospeškometer urnik aktiven</string>
    <string name="accelerometer_reminder_text">Pospeškometer se je pričel zajemati</string>
    <string name="accelerometer">pospeškometer</string>
    <string name="gps">GPS</string>
    <string name="camera">kamero</string>
    <string name="map_title">Zemljevid</string>
    <string name="map_my_location">Moja lokacija</string>
    <string name="map_search_hint">Išči lokacijo…</string>
    <string name="map_search_no_results">Ni rezultatov</string>
    <string name="map_selected_location">Izbrana lokacija</string>
    <string name="map_location_permission_required">Potrebno je dovoljenje za lokacijo</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoiYml0LWJhbmRpdCIsImEiOiJjbWJldzQyM28wNXRmMmlzaDhleWkwNXllIn0.CcdSzZ3I4zYYe4XXeUEItQ</string>
    <string name="view_stations">Postaje</string>
    <string name="view_lines">Linije</string>
    <string name="select_line_to_view">Izberi linijo</string>
    <string name="loading_route">Nalaganje linije…</string>
    <string name="search_stops">Iskanje postaj</string>
    <string name="show_all_stations">Prikaži vse postaje</string>
    <string name="location_permission_denied">Dovoljenje za lokacijo zavrnjeno</string>
    <string name="no_route_data">Ni podatkov o liniji</string>
    <string name="nearby_stations_title">Bližnje postaje</string>
    <string name="nearby_stations_message">Ali želite prikazati samo bližnje postaje?</string>
    <string name="yes">Da</string>
    <string name="no">Ne</string>
    <string name="no_nearby_stations">V bližini ni postaj</string>
    <string name="location_not_available">Lokacija ni na voljo</string>
    <string name="searching_nearby_stations">Iščem bližnje postaje…</string>
    <string name="enable_location_first">Najprej omogočite lokacijo</string>
    <string name="station_number_format">Postaja št. %s</string>
    <string name="bus_stop_icon">Ikona avtobusne postaje</string>
    <string name="favorite">Priljubljeno</string>
    <string name="departures">Odhodi</string>
    <string name="no_departures">Ni prihodnjih odhodov</string>
    <string name="view_details">Prikaži podrobnosti</string>
    <string name="added_to_favorites">Dodano med priljubljene</string>
    <string name="report_delay">Vnesi zamudo</string>
    <string name="report_delay_title">Prijava zamude</string>
    <string name="station_delay_info">Postaja: %s</string>
    <string name="select_line">Izberi linijo</string>
    <string name="delay_minutes_label">Zamuda v minutah</string>
    <string name="delay_value_format">%d min</string>
    <string name="delay_min">1 min</string>
    <string name="delay_max">60 min</string>
    <string name="submit_delay">Pošlji</string>
    <string name="delay_submitted">Zamuda uspešno poslana</string>
    <string name="delay_submit_error">Napaka pri pošiljanju: %s</string>
    <string name="select_line_first">Najprej izberite linijo</string>
    <string name="no_lines_available">Ni razpoložljivih linij</string>
    <string name="select_station">Izberi postajo</string>
    <string name="select_station_first">Najprej izberite postajo</string>
    <string name="events_delay_section">Prijava zamude</string>
    <string name="delay_for_line">Zamuda za linijo</string>
    <string name="login_title">Prijava</string>
    <string name="login_subtitle">Prijavite se za nadaljevanje</string>
    <string name="login_button">Prijava</string>
    <string name="login_no_account">Nimate računa? Registrirajte se</string>
    <string name="register_title">Registracija</string>
    <string name="register_subtitle">Ustvarite nov račun</string>
    <string name="register_button">Registracija</string>
    <string name="register_have_account">Že imate račun? Prijavite se</string>
    <string name="register_success">Registracija uspešna! Prijavite se.</string>
    <string name="auth_email">E-naslov</string>
    <string name="auth_password">Geslo</string>
    <string name="auth_password_confirm">Potrdi geslo</string>
    <string name="auth_username">Uporabniško ime</string>
    <string name="auth_user_icon">Ikona uporabnika</string>
    <string name="auth_error_email_required">E-naslov je obvezen</string>
    <string name="auth_error_email_invalid">Neveljaven e-naslov</string>
    <string name="auth_error_password_required">Geslo je obvezno</string>
    <string name="auth_error_password_short">Geslo mora imeti vsaj 6 znakov</string>
    <string name="auth_error_password_confirm_required">Potrditev gesla je obvezna</string>
    <string name="auth_error_passwords_mismatch">Gesli se ne ujemata</string>
    <string name="auth_error_username_required">Uporabniško ime je obvezno</string>
    <string name="auth_error_username_short">Uporabniško ime mora imeti vsaj 3 znake</string>
    <string name="auth_error_unknown">Neznana napaka</string>
    <string name="auth_error_not_logged_in">Niste prijavljeni</string>
    <string name="expand_collapse">Razširi/Skrij</string>
    <string name="settings_account">Račun</string>
    <string name="account_logged_in">Prijavljeni</string>
    <string name="account_no_email">Ni podatkov</string>
    <string name="logout_button">Odjava</string>
    <string name="logout_confirm_title">Odjava</string>
    <string name="logout_confirm_message">Ali se res želite odjaviti?</string>
    <string name="mqtt_disabled">Onemogočeno</string>
    <string name="mqtt_enabled">Omogočeno</string>
    <string name="mqtt_connected">Povezano</string>
    <string name="mqtt_disconnected">Nepovezano</string>
    <string name="mqtt_connecting">Povezovanje…</string>
    <string name="mqtt_connection_failed">Povezava neuspešna</string>
    <string name="mqtt_broker_url">URL MQTT posrednika</string>
    <string name="location_picker_title">Izberi lokacijo trka</string>
    <string name="location_picker_subtitle">Izberi lokacijo na zemljevidu ali vnesi naslov</string>
    <string name="location_street">Ulica</string>
    <string name="location_city">Kraj</string>
    <string name="location_search_address">Poišči naslov</string>
    <string name="location_pick_on_map">Izberi na zemljevidu</string>
    <string name="location_use_current">Uporabi trenutno lokacijo</string>
    <string name="location_selected">Izbrana lokacija:</string>
    <string name="location_confirm">Simuliraj trk</string>
    <string name="location_map_hint">Premakni zemljevid na želeno lokacijo</string>
    <string name="location_use_map_center">Uporabi to lokacijo</string>
    <string name="location_or_enter_address">Ali vnesi naslov</string>
</resources>