<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.projektna.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_sensors"
        android:name="com.example.projektna.ui.sensors.SensorsFragment"
        android:label="@string/nav_sensors"
        tools:layout="@layout/fragment_sensors" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.example.projektna.ui.events.EventsFragment"
        android:label="@string/nav_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.projektna.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
